[package]
name = "seisrefine"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
ndarray = "0.17.2"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
seisdomain-core = { path = "../seisdomain/crates/seisdomain-core" }
seisdomain-views = { path = "../seisdomain/crates/seisdomain-views" }
sgyx = { path = "../sgyx" }
thiserror = "2.0"
zarrs = { version = "0.23.7", default-features = true }

[dev-dependencies]
tempfile = "3.15"
